# fastapi-ecommerce

./: .gitignore  pyproject.toml  test.db
app/: main.py
app/api/v1/: routes.py
app/models/: product.py
app/schemas/: product.py
